[project]
name = "2025-p1-nicklhchang"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicholas Chang",email = "nicklhchang@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
